# Raptorflow

./: .check.bat  .ci_check.bat  .ci_jobs.bat  .commit_git.bat  .dockerignore  .editorconfig  .env.backup  .env.example  .env.local.example  .env.production  .env.template  .env.test  .env.universal-gemini  .eslintignore  .eslintrc.cjs  .fmt_push.bat  .gcloudignore  .gitattributes  .gitignore  .gitignore.prod  .importlinter  .lighthouserc.json  .mcp.json  .merge.bat  .npmrc  .pnpm-approve-builds.yaml  .pnpmrc  .pre-commit-config.yaml  .prettierignore  .rust_log.bat  00_START_HERE.md  014_create_gamification_achievements.sql  100-STEP-AUTHENTICATION-PLAN.md  ADVANCED_CODE_OPTIMIZATION.md  AESTHETE_WEEK5_COMPLETION.md  AGENTS.md  AGENT_INTEGRATION_PLAN.md  AGENT_SWARM_IMPLEMENTATION_PLAN.md  AI_RUNTIME_REDTEAM_REPORT.md  ANIMATION_FEATURES.md  (+816 more)
backend/: .dockerignore  .env.example  .env.phonepe.example  .env.production  .env.production.example  .env.simple  .env.test  AGENTS.md  AGENT_MEMORY_MIGRATION.md  AUTH_FIX_SUMMARY.md  COMPLETION_GUIDE.md  CONFIGURATION_GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  MEMORY_SIMPLIFICATION_COMPLETE.md  README.md  README_PRODUCTION.md  README_RADAR.md  RED_TEAM_REPORT.md  RESOURCE_METRICS_README.md  RESTRUCTURE_SUMMARY.md  SECURITY.md  SENTRY_SETUP_COMPLETE.md  TASK_10_COMPLETION_REPORT.md  TASK_29_COMPLETION_REPORT.md  __init__.py  app.py  app_factory.py  apply_auth_migration.py  audit_report_v1.md  base.py  campaigns.db  cloudbuild.yaml  cloudrun.env  cloudrun.env.yaml  comprehensive_test.py  config.py  config_clean.py  config_simple.py  (+88 more)
backend/agents/: __init__.py  ad_validator.py  ai_runtime_profiles.py  analytics.py  auto_scaling.py  base.py  base_agent.py  base_agent_enhanced.py  base_enhanced.py  base_swarm_agent.py  blackbox_specialist.py  brief_builder.py  checkpointing.py  classifier.py  cognitive_supervisor.py  compat.py  competitor_intel.py  compiler.py  config.py  context_assembler.py  cost_governor.py  cost_optimizer.py  creatives.py  crewai_adapter.py  crewai_coordination.py  crewai_monitoring.py  crewai_tasks.py  direct_validation.py  dispatcher.py  drift_detector.py  email_architect.py  errors.py  exceptions.py  experiments.py  failover.py  fix_error_handling.py  handoffs.py  heavy_integration.py  hybrid_integration.py  image_gen_director.py  (+39 more)
backend/ai/: __init__.py  client.py  types.py
backend/analytics/: advanced_analytics.py
backend/api/: __init__.py  dependencies.py  deps.py  error_responses.py  exception_handlers.py  legacy_registry.py  registry.py  system.py
backend/app/: __init__.py  auth_middleware.py  lifespan.py  metrics.py  middleware.py
backend/backend-clean/: ARCHIVED.md  __init__.py  requirements.txt
backend/bcm/: __init__.py
backend/benchmarks/: agent_performance.py  performance_benchmarks.py
backend/bootstrap/: __init__.py  dependencies.py
backend/bus/: __init__.py  channels.py  events.py  raptor_bus.py
backend/cognitive/: __init__.py  async_ops.py  caching.py  concurrent_processor.py  config_manager.py  context.py  di.py  engine.py  error_handling.py  execution.py  fallback.py  health_monitor.py  human_loop.py  interfaces.py  metrics.py  models.py  monitoring.py  parallel.py  pipeline.py  rate_limiter.py  reflection.py  resource_manager.py  retry.py  session_manager.py  startup.py  traces.py  validation.py
backend/collaboration/: realtime_collaboration.py
backend/competitor_intelligence/: README.md  __init__.py  adapters.py  config.py  manager.py  utils.py
backend/config/: __init__.py  agent_config.py  cognitive_config.py  cors_config.py  feature_flags.py  logging_config.py  prompts.py  settings.py  swarm_config.py
backend/core/: RATE_LIMITING_DOCUMENTATION.md  __init__.py  advanced_rate_limiter.py  advanced_ratelimit.py  advanced_validation.py  agent_monitor.py  analytics.py  api_client.py  api_keys.py  api_monitoring.py  api_rate_limiting.py  api_versioning.py  async_manager.py  async_tasks.py  audit.py  audit_decorator.py  audit_logger.py  auth.py  auth_enhanced.py  base_tool.py  batch_processor.py  behavioral_analysis.py  briefing.py  cache.py  cache_analytics.py  cache_backup.py  cache_compression.py  cache_decorator.py  cache_distributed.py  cache_enhanced.py  cache_error_handler.py  cache_health.py  cache_invalidation.py  cache_key_generator.py  cache_manager.py  cache_optimizer.py  cache_warming.py  celery_manager.py  channels.py  circuit_breaker.py  (+190 more)
backend/db/: __init__.py  agent_executions.py  base.py  blackbox.py  campaigns.py  council.py  daily_wins.py  evidence.py  filters.py  foundations.py  health.py  icps.py  messaging.py  moves.py  muse_assets.py  pagination.py  swarm_context.py
backend/deployment/: __init__.py  cicd.py  docker.py  gcp.py  monitoring.py  security.py
backend/docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  ERROR_RECOVERY_COMPLETE.md  FINAL_VERIFICATION_REPORT.md  README.md  VALIDATION_AND_HEALTH_MONITORING.md  ai_inference_api.md  architecture_review.md  backend-architecture.md  bus.md  comprehensive_caching.md  cost_logging.md  db_core.md  developer_portal.py  doc_generator.py  documentation_analytics.py  interactive_docs.py  microservices_plan.md  openapi_comprehensive.yaml  payment_security.md  phonepe-payment-system.md  sdk_generator.py  sentry_monitoring.md  versioning_docs.py
backend/domains/: __init__.py
backend/error_handling/: error_recovery.py
backend/errors/: cognitive_errors.py
backend/events/: __init__.py  bus.py  types.py
backend/examples/: __init__.py  memory_aware_orchestration_example.py  memory_system_example.py  meta_learning_examples.py  research_domain_example.py
backend/features/: AGENTS.md
backend/fixtures/: business_context_agency.json  business_context_ecommerce.json  business_context_saas.json
backend/graphs/: __init__.py  analytics_graph.py  blackbox_analysis.py  blackbox_industrial.py  cognitive_spine.py  content_graph.py  council.py  customer_intelligence_graph.py  execution_analytics_graph.py  execution_graph.py  integration_graph.py  master_graph.py  moves_campaigns_orchestrator.py  spine_v2.py  (+11 more)
(+7750 files in other folders)
