[workspace]
resolver = "2"
members = [
  "crates/api",
  "crates/avatars",
  "crates/auth",
  "crates/aws",
  "crates/billing",
  "crates/cache",
  "crates/campaigns",
  "crates/config",
  "crates/contracts",
  "crates/council",
  "crates/db",
  "crates/eel",
  "crates/foundation",
  "crates/gcp",
  "crates/harness",
  "crates/http",
  "crates/integrations",
  "crates/intel",
  "crates/jobs",
  "crates/muse",
  "crates/office",
  "crates/prl",
  "crates/resend",
  "crates/sqs",
  "crates/telemetry",
  "crates/testing"
]

[workspace.package]
edition = "2024"
license = "Proprietary"
publish = false
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.3"
jsonwebtoken = { version = "10.1", features = ["rust_crypto"] }
redis = { version = "0.32", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-cron-scheduler = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ulid = { version = "1.2", features = ["serde"] }
qdrant-client = "1.10.1"
murmur3 = "0.1"
serde-xml-rs = "0.6"
subtle = "2.6"
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }
