[workspace]
resolver = "2"
members = [
  "crates/api",
  "crates/acquisition",
  "crates/avatars",
  "crates/auth",
  "crates/aws",
  "crates/campaigns",
  "crates/config",
  "crates/contracts",
  "crates/council",
  "crates/db",
  "crates/eel",
  "crates/foundation",
  "crates/harness",
  "crates/http",
  "crates/integrations",
  "crates/intel",
  "crates/jobs",
  "crates/office",
  "crates/prl",
  "crates/research",
  "crates/resend",
  "crates/sqs",
  "crates/search",
  "crates/telemetry",
  "crates/testing"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Proprietary"
publish = false
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-s3 = "1"
aws-smithy-http-client = { version = "1", default-features = false, features = ["rustls-ring"] }
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chromiumoxide = "0.5"
config = "0.15"
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
governor = "0.7"
hex = "0.4"
hmac = "0.12"
http = "1.3"
jsonschema = "0.29"
jsonwebtoken = { version = "10.1", features = ["rust_crypto"] }
murmur3 = "0.1"
qdrant-client = "1.10.1"
raptorflow-config = { path = "crates/config" }
raptorflow-contracts = { path = "crates/contracts" }
raptorflow-db = { path = "crates/db" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-cron-scheduler = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
sentry = { version = "0.47.0", features = ["tracing", "logs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ulid = { version = "1.2", features = ["serde"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }
