[tool.poetry]
name = "raptorflow-spine"
version = "0.1.0"
description = "The Agentic Spine for RaptorFlow"
authors = ["RaptorFlow Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
langchain = "^0.3.0"
langchain-google-vertexai = "^2.0.0"
langgraph = "^0.2.0"
langgraph-checkpoint-postgres = "^3.0.2"
psycopg = {extras = ["binary"], version = "^3.1.17"}
psycopg-pool = "^3.3.0"
upstash-redis = "^1.5.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
