[package]
name = "raptorflow-acquisition"
description = "Web content acquisition layer for RaptorFlow intel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
raptorflow-config.workspace = true

reqwest.workspace = true
scraper.workspace = true
url.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
governor.workspace = true
bytes.workspace = true
chromiumoxide.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test = "0.4"
