[package]
name = "raptorflow-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
raptorflow-aws = { path = "../aws" }
raptorflow-config = { path = "../config" }
raptorflow-db = { path = "../db" }
raptorflow-http = { path = "../http" }
raptorflow-integrations = { path = "../integrations" }
raptorflow-jobs = { path = "../jobs" }
raptorflow-search = { path = "../search" }
raptorflow-telemetry = { path = "../telemetry" }
