[package]
name = "raptorflow-avatars"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
raptorflow-contracts = { path = "../contracts" }
raptorflow-db = { path = "../db" }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls"] }
uuid = { workspace = true, features = ["v4"] }
ulid = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }