[package]
name = "raptorflow-billing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
tracing.workspace = true
raptorflow-config = { path = "../config" }
raptorflow-contracts = { path = "../contracts" }
