[package]
name = "raptorflow-eel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
raptorflow-contracts = { path = "../contracts" }
raptorflow-avatars = { path = "../avatars" }
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
