[package]
name = "raptorflow-foundation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
raptorflow-db = { path = "../db" }
raptorflow-config = { path = "../config" }
raptorflow-avatars = { path = "../avatars" }
