[package]
name = "raptorflow-gcp"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
raptorflow-config = { path = "../config" }
