[package]
name = "raptorflow-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
ulid.workspace = true
futures.workspace = true
raptorflow-db = { path = "../db" }
raptorflow-cache = { path = "../cache" }
raptorflow-gcp = { path = "../gcp" }
raptorflow-config = { path = "../config" }
raptorflow-contracts = { path = "../contracts" }
raptorflow-eel = { path = "../eel" }
raptorflow-prl = { path = "../prl" }