[package]
name = "raptorflow-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
uuid.workspace = true
ulid.workspace = true
chrono.workspace = true
bytes.workspace = true
sqlx.workspace = true
reqwest.workspace = true
scraper.workspace = true
async-trait.workspace = true
raptorflow-aws = { path = "../aws" }
raptorflow-auth = { path = "../auth" }
raptorflow-billing = { path = "../billing" }
raptorflow-cache = { path = "../cache" }
raptorflow-db = { path = "../db" }
raptorflow-config = { path = "../config" }
raptorflow-foundation = { path = "../foundation" }
raptorflow-prl = { path = "../prl" }
raptorflow-intel = { path = "../intel" }
raptorflow-jobs = { path = "../jobs" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
