[package]
name = "raptorflow-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
uuid.workspace = true
ulid.workspace = true
chrono.workspace = true
bytes.workspace = true
sqlx.workspace = true
reqwest.workspace = true
scraper.workspace = true
async-trait.workspace = true
raptorflow-auth = { path = "../auth" }
raptorflow-avatars = { path = "../avatars" }
raptorflow-aws = { path = "../aws" }
raptorflow-db = { path = "../db" }
raptorflow-config = { path = "../config" }
raptorflow-foundation = { path = "../foundation" }
raptorflow-prl = { path = "../prl" }
raptorflow-intel = { path = "../intel" }
raptorflow-acquisition = { path = "../acquisition" }
raptorflow-jobs = { path = "../jobs" }
raptorflow-harness = { path = "../harness" }
raptorflow-search = { path = "../search" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
futures-util.workspace = true
hmac.workspace = true
jsonschema.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true
