[package]
name = "raptorflow-intel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
raptorflow-contracts = { path = "../contracts" }
raptorflow-auth = { path = "../auth" }
raptorflow-db = { path = "../db" }
