[package]
name = "raptorflow-jobs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
raptorflow-contracts = { path = "../contracts" }
