[package]
name = "raptorflow-jobs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
sqlx.workspace = true
raptorflow-contracts = { path = "../contracts" }
raptorflow-acquisition = { path = "../acquisition" }
raptorflow-research = { path = "../research" }
raptorflow-db = { path = "../db" }
raptorflow-auth = { path = "../auth" }
raptorflow-config = { path = "../config" }
anyhow.workspace = true
