[package]
name = "raptorflow-prl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
axum.workspace = true
futures.workspace = true
chrono.workspace = true
raptorflow-contracts = { path = "../contracts" }
raptorflow-auth = { path = "../auth" }
raptorflow-db = { path = "../db" }
tracing.workspace = true
