[package]
name = "raptorflow-testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
raptorflow-contracts = { path = "../contracts" }
raptorflow-billing = { path = "../billing" }
raptorflow-cache = { path = "../cache" }
raptorflow-aws = { path = "../aws" }
